# AdvancedML_Project

./: .gitignore  Makefile  README.md  pyproject.toml
cyclic_coordinate_descent_in_lr/: __init__.py  dataset.py  datasets.py  features.py  plots.py  synthetic_dataset.py
cyclic_coordinate_descent_in_lr/modeling/: predict.py  train.py
data/preprocessed/: breast_cancer.csv  ionosphere.csv  wine_quality.csv
data/synthetic_datasets/large_datasets/low_dimenssionality/: p_0.1_and_g_0.05  p_0.1_and_g_0.1  p_0.1_and_g_0.4  p_0.1_and_g_0.5  p_0.1_and_g_0.6  p_0.1_and_g_0.9  p_0.1_and_g_0.95  p_0.30000000000000004_and_g_0.05  p_0.30000000000000004_and_g_0.1  p_0.30000000000000004_and_g_0.4  p_0.30000000000000004_and_g_0.5  p_0.30000000000000004_and_g_0.6  p_0.30000000000000004_and_g_0.9  p_0.30000000000000004_and_g_0.95  p_0.5_and_g_0.05  p_0.5_and_g_0.1  p_0.5_and_g_0.4  p_0.5_and_g_0.5  p_0.5_and_g_0.6  p_0.5_and_g_0.9  p_0.5_and_g_0.95  p_0.7000000000000001_and_g_0.05  p_0.7000000000000001_and_g_0.1  p_0.7000000000000001_and_g_0.4  p_0.7000000000000001_and_g_0.5  p_0.7000000000000001_and_g_0.6  p_0.7000000000000001_and_g_0.9  p_0.7000000000000001_and_g_0.95  p_0.9_and_g_0.05  p_0.9_and_g_0.1  p_0.9_and_g_0.4  p_0.9_and_g_0.5  p_0.9_and_g_0.6  p_0.9_and_g_0.9  p_0.9_and_g_0.95
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: dataset_exploration.ipynb  main.ipynb  preprocessing.ipynb  preprocessing_MP.ipynb
plots/: CCD_results.p  plots.py  sklearn_results.p
src/: LogRegCDD.py  __init__.py  preprocessing.py
(+210 files in other folders)
